--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf ../build && cp -rf build ../",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "git checkout main && cp -rf ../build/* `pwd` && git add . && git commit -m \"update-prod\" && git push -f && git checkout master"
   },
   "eslintConfig": {
     "extends": "react-app"
